# Reversibility

d7cp_proxys/: CMakeLists.txt  package.xml
d7cp_proxys/include/d7cp_proxys/: Anyfeeder.h  InspectionSystem.h  VisionSystem.h
d7cp_proxys/include/d7cp_proxys/gripper/: D7PCGripper.h  WSG25Gripper.h  WSG25Proxy.h
d7cp_proxys/include/d7cp_proxys/robot_movement_interface/: RobworkInterface.h  RosProxy.h
d7cp_proxys/launch/: d7cp.launch  d7cp_no_robot.launch
d7cp_proxys/src/: Anyfeeder.cpp  InspectionSystem.cpp  VisionSystem.cpp
d7cp_proxys/src/gripper/: D7PCGripper.cpp  WSG25Gripper.cpp  WSG25Proxy.cpp
d7cp_proxys/src/robot_movement_interface/: RobworkInterface.cpp  RosProxy.cpp
reversible_carmen_internal_dsl/: CMakeLists.txt~  package.xml  package.xml~
reversible_carmen_internal_dsl/launch/: dsl_sdu_magic.launch  valgrind_dsl.launch  valgrind_magic.launch
reversible_carmen_internal_dsl/src/: main.cpp
reversible_carmen_internal_dsl/src/common/: CommentsExample.hpp  DataCollectPrint.cpp  DataCollectPrint.hpp  DataPrint.cpp  DataPrint.hpp  GraphPrint.cpp  GraphPrint.hpp  GraphRepresentation.cpp  GraphRepresentation.hpp  ProjectedFrames.cpp  ProjectedFrames.hpp  WorkcellModel.cpp  WorkcellModel.hpp  common.cpp  common.hpp
reversible_carmen_internal_dsl/src/language/: AssemblyProgram.cpp  AssemblyProgram.hpp  (+4 more)
reversible_d7pc_delemiter_seperated_dsl/: CMakeLists.txt  instruction set  package.xml
reversible_d7pc_delemiter_seperated_dsl/launch/: gdb.launch~
reversible_d7pc_delemiter_seperated_dsl/src/: AssemblyProgram.cpp  AssemblyProgram.h  CommandInterpreter.cpp  CommandInterpreter.h  CommandString.cpp  CommandString.h  File.cpp  File.h  MemoryModel.cpp  MemoryModel.hpp  RegexIntepreter.cpp  RegexIntepreter.h  RosAutoSpinner.cpp  RosAutoSpinner.h  TestTools.cpp  main.cpp
reversible_d7pc_interpreter/: CMakeLists.txt  package.xml
reversible_d7pc_interpreter/include/dep/basemodel/graph/: Graph.cpp  Graph.h  Node.h
reversible_d7pc_interpreter/src/: D7pcCodeGenneration.cpp  D7pcCodeGenneration.h  D7pcInterpretation.cpp  D7pcInterpretation.h  TestTools.cpp  main.cpp  main.cpp~
reversible_d7pc_interpreter/src/d7pc_interpreter/: CodeGen.cpp  CodeGen.h
reversible_d7pc_interpreter/src/gennerated_code/: D7pcString2Variable.cpp  D7pcString2Variable.h  D7pcString2VariableTemplate.cpp  D7pcString2VariableTemplate.h  D7pcString2VariableTemplate2.cpp  D7pcString2VariableTemplate2.h  graph.dot  graph.dot~  program_graph.dot
reversible_d7pc_interpreter/src/test_programs/: string_manipulation.txt
reversible_d7pc_interpreter/test/: test_how_to.txt  test_input_file_1.txt
reversible_d7pc_model/: CMakeLists.txt  CMakeLists.txt~  package.xml
reversible_d7pc_model/include/dep/basemodel/graph/: Identification.h  Node.cpp
reversible_d7pc_model/include/reversible_d7pc_model/: ModelFactory.h
reversible_d7pc_model/launch/: valgrind.launch
reversible_d7pc_model/src/: ModelFactory.cpp  ModelFactory.cpp~  main.cpp  main.cpp~
reversible_d7pc_model/src/model/: D7pcWorkspace23.cpp  D7pcWorkspace23.h  ExecutionResult23.cpp  ExecutionResult23.h  Identification23.cpp  Identification23.h  Instruction.cpp  Instruction.h  InstructionExecutable.cpp  InstructionExecutable.h  Variable.cpp  Variable.h  Variables.cpp  Variables.h
reversible_d7pc_model/src/model/controller/: ControlUnit.cpp  ControlUnit.h
reversible_d7pc_model/src/model/derivedInstructions/: Assignment.cpp  Assignment.h  Declaration.cpp  Declaration.cpp~  Declaration.h~  IiwaMove.cpp  IiwaMove.h  Nothing.cpp  Nothing.h  PrepareFeeder.cpp  PrepareFeeder.h  Print.cpp  Print.h  RestartPoint.cpp  RestartPoint.h  String2Type.cpp  String2Type.h  Update.cpp  Update.h
reversible_d7pc_model/src/model/graphviz/: GraphPrint.cpp  GraphPrint.hpp  GraphRepresentation.cpp  GraphRepresentation.hpp
reversible_dsl/: CMakeLists.txt  package.xml
reversible_dsl/launch/: gdb.launch~
reversible_dsl/src/: Converter.cpp  Converter.h  D7cpWorkcell.cpp  D7cpWorkcell.h  DynamicGrasp.cpp  DynamicGrasp.h  KukaIIWAPlanner.cpp  KukaIIWAPlanner.hpp  Move.cpp  Move.h  Move2Q.cpp  Move2Q.h  MoveLin.cpp  MoveLin.h  Planner.cpp  Planner.h  colors.cpp  colors.hpp  lua script.lua  macros.cpp  macros.h  main.cpp  main_full_sequence.cpp  main_outershell_test.cpp
reversible_dsl/src/depricated/: D7cpObject.cpp  D7cpObject.h
reversible_dsl/src/preplanner/: OnlinePlanners.cpp  OnlinePlanners.h  Path.cpp  Path.h  Preplanner.cpp  Preplanner.h
reversible_dsl/src/skill/: AnyfeederPickSkill.cpp  AnyfeederPickSkill.h  Compliant_pih_skill.cpp  Compliant_pih_skill.h  spiral_skill.cpp  spiral_skill.hpp  wiggle_skill.cpp  wiggle_skill.h
reversible_parser/: CMakeLists.txt  package.xml  package.xml~
reversible_parser/include/reversible_parser/: D7pcAstType.h  D7pcParser.h  D7pcTokenType.h
reversible_parser/include/reversible_parser/ast/: AST2Graphviz.h  ASTNode.h
reversible_parser/include/reversible_parser/lexer/: RegexLexer.h  Token.h  TokenBuffer.h  TokenType.h
reversible_parser/include/reversible_parser/parser/: Error23.h  ParseResult.h
reversible_parser/include/reversible_parser/support/: File23.h  GraphvizPrinter.h
reversible_parser/launch/: debug_debug.txt  gdb.launch
reversible_parser/src/: D7pcAstRefinement.cpp  D7pcAstRefinement.h  D7pcAstType.cpp  D7pcParser.cpp  D7pcTokenType.cpp  edsl.txt  main.cpp  main.cpp~
reversible_parser/src/ast/: AST2Graphviz.cpp  ASTNode.cpp  ASTProcessor.cpp  ASTProcessor.h
reversible_parser/src/code_genneration/: CodeGen.cpp
reversible_parser/src/gennerated_code/: ast_graph.dot  ast_raw_graph.dot  ast_refined_graph.dot
reversible_parser/src/lexer/: RegexLexer.cpp  Token.cpp  TokenBuffer.cpp  TokenType.cpp
reversible_parser/src/parser/: Combinator.cpp  Combinator.h  Error23.cpp  ListCombinator.cpp  ListCombinator.h  OrCombinator.cpp  OrCombinator.h  ParseResult.cpp  SemanticProcessor.cpp  SemanticProcessor.h  SequenceCombinator.cpp  SequenceCombinator.h  Terminal.cpp  Terminal.h
reversible_parser/src/support/: File23.cpp  GraphvizPrinter.cpp
reversible_parser/test/: test_reversible_parser.cpp
(+205 files in other folders)
