<?xml version="1.0"?>
<package>
  <name>d7cp_proxys</name>
  <version>0.0.0</version>
  <description>The d7cp_proxys package</description>
  <maintainer email="josl@todo.todo">josl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>wsg_50_common</build_depend>
  <run_depend>wsg_50_common</run_depend>

  <build_depend>iiwa_msgs</build_depend>
  <run_depend>iiwa_msgs</run_depend>

  <build_depend>d7pc_msgs</build_depend>
  <run_depend>d7pc_msgs</run_depend>

  <build_depend>anyfeeder_driver</build_depend>
  <run_depend>anyfeeder_driver</run_depend>

  <build_depend>robot_movement_interface</build_depend>
  <run_depend>robot_movement_interface</run_depend>

  <build_depend>iiwa_driver</build_depend>	<!-- from robot_movement_interface -->
  <run_depend>iiwa_driver</run_depend>	<!-- from robot_movement_interface -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>